--- a/NN_practice/NN_from_scratch.ipynb
+++ b/NN_practice/NN_from_scratch.ipynb
@@ -812,8 +812,127 @@
    "execution_count": null,
    "id": "8f8ab2e8-de2e-4f5c-aa73-4fbedf013569",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4.4  , 1.21 , 2.385],\n",
+       "       [8.1  , 0.   , 0.2  ],\n",
+       "       [2.01 , 1.051, 0.026]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "dvalues = np.array([[1,1,1],\n",
+    "                   [2,2,2],\n",
+    "                   [3,3,3]])\n",
+    "inputs = np.array([[1,2,3,2.5],\n",
+    "                  [2,5,-1,2],\n",
+    "                   [-1.5,2.7,3.3,-0.8]])\n",
+    "weights = np.array([[-0.2,0.8,-0.5,1],\n",
+    "                   [0.5,-0.91,0.26,-0.5],\n",
+    "                   [-0.26,-0.27,0.17,0.87]]).T\n",
+    "biases = np.array([2,3,0.5])\n",
+    "\n",
+    "#forward pass\n",
+    "layer_outputs = np.dot(inputs,weights) + biases\n",
+    "relu_outputs = np.maximum(0,layer_outputs) #activation function. if less than zero, becomes zero\n",
+    "relu_outputs,layer_outputs\n",
+    "drelu = relu_outputs.copy()\n",
+    "drelu\n",
+    "drelu[layer_outputs<=0] =0\n",
+    "drelu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8637a4f-8b10-4f42-9da1-a410cbfc120c",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import nnfs\n",
+    "from nnfs.datasets import spiral_data\n",
+    "nnfs.init()\n",
+    "\n",
+    "# Dense Layer\n",
+    "class Layer_Dense:\n",
+    "    # Layer initialization\n",
+    "    def __init__(self, n_inputs, n_neurons):\n",
+    "        # Initialize weights and biases\n",
+    "        self.weights = 0.01*np.random.randn(n_inputs,n_neurons)\n",
+    "        self.biases = np.zeros((1, n_neurons))\n",
+    "    # Forward pass\n",
+    "    def forward(self,inputs):\n",
+    "        # remember input values\n",
+    "        self.inputs = inputs\n",
+    "        # Calculate output values from input ones, weights and biases\n",
+    "        self.output = np.dot(inputs,self.weights) + self.biases\n",
+    "    # Backward pass\n",
+    "    def backward(self, dvalues):\n",
+    "        # Gradients on parameters\n",
+    "        self.dweights = np.dot(self.inputs.T, dvalues)\n",
+    "        self.dbiases = np.sum(dvalues, axis=0, keepdims=True)\n",
+    "        # Gradient on values\n",
+    "        self.dinputs = np.dot(dvalues, self.weights.T)\n",
+    "        \n",
+    "# ReLU Activations\n",
+    "class Activation_ReLU:\n",
+    "    def forward(self, inputs):\n",
+    "        self.output = np.maximum(0,inputs)      \n",
+    "        \n",
+    "class Activation_Softmax:\n",
+    "    def forward(self, inputs):\n",
+    "        exp_values = np.exp(inputs - np.max(inputs,axis=1,keepdims=True))\n",
+    "        probabilities = exp_values/np.sum(exp_values,axis=1,keepdims=True)\n",
+    "        self.output = probabilities\n",
+    "        \n",
+    "class Loss:\n",
+    "    def calculate(self,output,y):\n",
+    "        sample_losses = self.forward(output,y)\n",
+    "        data_loss = np.mean(sample_losses)\n",
+    "        return data_loss\n",
+    "        \n",
+    "class Loss_CategoricalCrossEntropy(Loss):\n",
+    "    def forward(self, y_pred, y_true):\n",
+    "        samples = len(y_pred)\n",
+    "        y_pred_clipped = np.clip(y_pred,1e-7,1-1e-7)\n",
+    "        \n",
+    "        if len(y_true.shape) == 1:\n",
+    "            correct_confidences = y_pred_clipped[range(samples),y_true]\n",
+    "\n",
+    "        elif len(y_true.shape) == 2:\n",
+    "            correct_confidences = np.sum(y_pred_clipped*y_true,axis=1)\n",
+    "            \n",
+    "        negative_log_likelihoods = -np.log(correct_confidences)\n",
+    "        return negative_log_likelihoods\n",
+    "        \n",
+    "X,y = spiral_data(samples=100, classes=3)\n",
+    "\n",
+    "dense1 = Layer_Dense(2,3)\n",
+    "activation1 = Activation_ReLU()\n",
+    "\n",
+    "dense2 = Layer_Dense(3,3)\n",
+    "activation2 = Activation_Softmax()\n",
+    "\n",
+    "dense1.forward(X)\n",
+    "activation1.forward(dense1.output)\n",
+    "\n",
+    "dense2.forward(activation1.output)\n",
+    "activation2.forward(dense2.output)\n",
+    "\n",
+    "print(activation2.output[:5])\n",
+    "loss_function = Loss_CategoricalCrossEntropy()\n",
+    "loss = loss_function.calculate(activation2.output,y)\n",
+    "print(\"Loss:\",loss)"
+   ]
   }
  ],
  "metadata": {
